--- a/index.html
+++ b/index.html
@@ -67,6 +67,31 @@
                 </div>
             </div>
         </div>
+        <div class="contact">
+            <h3>Contactez-nous</h3>
+            <h4></h4>
+            <p>Notre vision est de rendre le quotidien numérique,</p>
+            <p>Avez-vous besoin de notre service? Veillez completer le formulaire ci-après:</p>
+            <form action="">
+                <div class="formulaire">
+                    <div>
+                        <label for="names">Noms</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email">
+                    </div>
+                </div>
+                <div class="textarea">
+                    <input type="text" placeholder="Sujet">
+                    <textarea name="message" id="" cols="30" rows="4" placeholder="Message"></textarea>
+                </div>
+                <button>
+                    <a href="#">Envoyer</a>
+                </button>
+            </form>
+        </div>
     </section>
 
     <footer>
