add to my repository

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 </div>
                 <div class="header-items">
                     <ul>
-                        <li><a class="accueil" href="#">Accueil</a></li>
-                        <li><a href="#">A propos</a></li>
-                        <li><a href="#">Fonctionnalités</a></li>
-                        <li><a href="#">Avantages</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a class="accueil" href="#accueil">Accueil</a></li>
+                        <li><a href="#apropos">A propos</a></li>
+                        <li><a href="#fonctionnalite">Fonctionnalités</a></li>
+                        <li><a href="#avantage">Avantages</a></li>
+                        <li><a href="#contact">Contacts</a></li>
                     </ul>
                 </div>
             </div>
         </header>
-        <div class="cover-page">
+        <div id="accueil" class="cover-page">
             <div>
                 <h2>Salama Control</h2>
                 <p>Le système qui facilite le contrôle des documents de circulation routière
@@ -44,7 +44,7 @@
         </div>
     </section>
     <section>
-        <div class="salamacontrol">
+        <div id="apropos" class="salamacontrol">
             <h3>Qu'est-ce Salama Control?</h3>
             <h4></h4>
             <div>
@@ -55,7 +55,52 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, quo?</p>
             </div>
         </div>
-        <div class="avantages">
+
+        <div class="fonctionnalite">
+            <h3>Fonctionnalités</h3>
+            <h4></h4>
+            <div class="accordion-item">
+                <div class="accordion-item-header">
+                    <div class="accordion-item-title">
+                        <h4>Bureau central</h4>
+                        <span class="icon"></span>
+                    </div>
+                    <div class="accordion-item-body">
+                        <div class="accordion-item-body-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-item-header">
+                    <div class="accordion-item-title">
+                        <h4>Roulage</h4>
+                        <span class="icon"></span>
+                    </div>
+                    <div class="accordion-item-body">
+                        <div class="accordion-item-body-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-item-header">
+                    <div class="accordion-item-title">
+                        <h4>Chauffeur</h4>
+                        <span class="icon"></span>
+                    </div>
+                    <div class="accordion-item-body">
+                        <div class="accordion-item-body-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="avantage" class="avantages">
             <div class="avantages-items">
                 <h3>Avantages de Salama Control</h3>
                 <h4></h4>
@@ -67,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
+        <div id="contact" class="contact">
             <h3>Contactez-nous</h3>
             <h4></h4>
             <p>Notre vision est de rendre le quotidien numérique,</p>
@@ -91,6 +136,19 @@
                     <a href="#">Envoyer</a>
                 </button>
             </form>
+        </div>
+        <div class="suggestion">
+            <div class="suggestion-content">
+                <div>
+                    <h3>suggestions</h3>
+                    <h4></h4>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eum aperiam exercitationem ducimus doloribus porro ullam quae totam maxime, natus optio magnam rem quam praesentium maiores voluptatum explicabo animi aut iure aspernatur. Aliquid laudantium quae, dignissimos dolor, quia blanditiis illo dicta, non eligendi atque ipsa necessitatibus cupiditate explicabo voluptate laboriosam.</p>
+                </div>
+                <div>
+                    <a href="#">+243 976 752 609</a>
+                </div>
+            </div>
         </div>
     </section>
 
