add to my repository

--- a/index.html
+++ b/index.html
@@ -45,57 +45,46 @@
     </section>
     <section>
         <div id="apropos" class="salamacontrol">
-            <h3>Qu'est-ce Salama Control?</h3>
-            <h4></h4>
-            <div>
-                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, expedita ex alias non error fuga mollitia quasi nostrum illo incidunt sunt quo ut neque officia facilis repellat corrupti odio nobis tempora. Ad quasi repellat ab tempora quaerat quis error eaque facilis assumenda ea! Iusto corporis reiciendis recusandae temporibus cum quia possimus similique beatae ipsam earum vero, eligendi assumenda non voluptatem labore ea inventore obcaecati odio hic ipsa nostrum adipisci itaque. Doloribus voluptas magni omnis hic placeat obcaecati expedita perspiciatis minus!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis molestiae placeat? Repudiandae culpa eaque nesciunt reiciendis, libero, rerum delectus alias natus temporibus quam totam in, ad repellat maxime nemo!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam esse sapiente delectus, quaerat reprehenderit non eos, hic iste veritatis ad minus. Unde voluptas magni totam porro ipsa? Ipsum perspiciatis soluta maxime recusandae incidunt ad quia dignissimos exercitationem, dolorum aliquam impedit assumenda suscipit, nostrum rerum nesciunt atque quis molestias! Accusantium.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, et sit consectetur soluta, corrupti, quae sunt alias repellat corporis ad aspernatur officiis. Accusantium reiciendis facilis reprehenderit explicabo officiis porro dolorem quod, eos repudiandae quisquam, mollitia ea quidem! Voluptates rerum provident obcaecati accusamus corporis, esse quas iure ab voluptas delectus officia a, necessitatibus quia, dicta fugit possimus eaque recusandae quasi iusto voluptatum modi consequatur quae. Dignissimos nesciunt minus, illo assumenda hic, voluptas ea reiciendis explicabo eum, nihil quae laborum ad perferendis. Deleniti iste expedita libero atque ullam debitis consequatur ratione in?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, quo?</p>
+            <div class="salamacontrol-content">
+                <h3>Qu'est-ce Salama Control?</h3>
+                <h4></h4>
+                <div>
+                    <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, expedita ex alias non error fuga mollitia quasi nostrum illo incidunt sunt quo ut neque officia facilis repellat corrupti odio nobis tempora. Ad quasi repellat ab tempora quaerat quis error eaque facilis assumenda ea! Iusto corporis reiciendis recusandae temporibus cum quia possimus similique beatae ipsam earum vero, eligendi assumenda non voluptatem labore ea inventore obcaecati odio hic ipsa nostrum adipisci itaque. Doloribus voluptas magni omnis hic placeat obcaecati expedita perspiciatis minus!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis molestiae placeat? Repudiandae culpa eaque nesciunt reiciendis, libero, rerum delectus alias natus temporibus quam totam in, ad repellat maxime nemo!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam esse sapiente delectus, quaerat reprehenderit non eos, hic iste veritatis ad minus. Unde voluptas magni totam porro ipsa? Ipsum perspiciatis soluta maxime recusandae incidunt ad quia dignissimos exercitationem, dolorum aliquam impedit assumenda suscipit, nostrum rerum nesciunt atque quis molestias! Accusantium.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, et sit consectetur soluta, corrupti, quae sunt alias repellat corporis ad aspernatur officiis. Accusantium reiciendis facilis reprehenderit explicabo officiis porro dolorem quod, eos repudiandae quisquam, mollitia ea quidem! Voluptates rerum provident obcaecati accusamus corporis, esse quas iure ab voluptas delectus officia a, necessitatibus quia, dicta fugit possimus eaque recusandae quasi iusto voluptatum modi consequatur quae. Dignissimos nesciunt minus, illo assumenda hic, voluptas ea reiciendis explicabo eum, nihil quae laborum ad perferendis. Deleniti iste expedita libero atque ullam debitis consequatur ratione in?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, quo?</p>
+                </div>
             </div>
         </div>
 
         <div class="fonctionnalite">
             <h3>Fonctionnalités</h3>
             <h4></h4>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    <div class="accordion-item-title">
-                        <h4>Bureau central</h4>
-                        <span class="icon"></span>
-                    </div>
-                    <div class="accordion-item-body">
-                        <div class="accordion-item-body-content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
-                        </div>
-                    </div>
+            <div class="fontionnalite-content">
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    <div class="accordion-item-title">
-                        <h4>Roulage</h4>
-                        <span class="icon"></span>
-                    </div>
-                    <div class="accordion-item-body">
-                        <div class="accordion-item-body-content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
-                        </div>
-                    </div>
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    <div class="accordion-item-title">
-                        <h4>Chauffeur</h4>
-                        <span class="icon"></span>
-                    </div>
-                    <div class="accordion-item-body">
-                        <div class="accordion-item-body-content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, corporis deleniti dolores, ipsa rem vero repellendus veniam nostrum, sunt quidem beatae? Vel dolorem consequatur unde!</p>
-                        </div>
-                    </div>
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                </div>
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                </div>
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                </div>
+                <div>
+                    <span></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
                 </div>
             </div>
         </div>
@@ -153,14 +142,20 @@
     </section>
 
     <footer>
-        <div>
-            <p> ©2023 - Salama Control</p>
+        <div class="footer-content">
+            <div>
+                <p> ©2023 - Salama Control</p>
+            </div>
+            <div>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
         </div>
-        <div>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <div class="top">
+            <i class="fa-solid fa-caret-up"></i>
+            <p>top</p>
         </div>
     </footer>
 </body>
