--- a/index.html
+++ b/index.html
@@ -62,29 +62,56 @@
             <h3>Fonctionnalités</h3>
             <h4></h4>
             <div class="fontionnalite-content">
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                <div class="bureau-side">
+                    <h5>Du coté bureau central</h5>
+                    <div class="bureau-side-content">
+                        <div>
+                            <span>.</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                        </div>
+                        <div>
+                            <span></span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                        </div>
+                        <div>
+                            <span></span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                        </div>
+                        <div>
+                            <span></span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                <div class="roulage-side">
+                    <p>Du cote du Roulage</p>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
                 </div>
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
-                </div>
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
-                </div>
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
-                </div>
-                <div>
-                    <span></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                <div class="chauffeur-side">
+                    <p>Du cote Chauffeur</p>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
+                    <div>
+                        <span></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere animi tenetur nulla maxime excepturi voluptatum.</p>
+                    </div>
                 </div>
             </div>
         </div>
