add to my repository

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="fonctionnalite">
+        <div id="fonctionnalite" class="fonctionnalite">
             <h3>Fonctionnalités</h3>
             <h4></h4>
             <div class="fontionnalite-content">
