add to my repository

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         <li><a href="#contact">Contacts</a></li>
                     </ul>
                 </div>
+                <div class="menu">
+                    <div class="menu-icons">
+                        <i class="fa-solid fa-bars icon"></i>
+                        <i class="fa-solid fa-xmark exit"></i>
+                    </div>
+                </div>
             </div>
         </header>
         <div id="accueil" class="cover-page">
