--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                         <i class="fa-solid fa-bars icon"></i>
                         <i class="fa-solid fa-xmark exit"></i>
                     </div>
+                    <div class="menu-container">
+                        <ul>
+                            <li><a href="#">Accueil</a></li>
+                            <li><a href="#">A propos</a></li>
+                            <li><a href="#">Fonctionnalités</a></li>
+                            <li><a href="#">Avantages</a></li>
+                            <li><a href="#">Contacts</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </header>
