add to my repository

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     </div>
                     <div class="menu-container">
                         <ul>
-                            <li><a href="#">Accueil</a></li>
-                            <li><a href="#">A propos</a></li>
-                            <li><a href="#">Fonctionnalités</a></li>
-                            <li><a href="#">Avantages</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a class="nav-links" href="#accueil">Accueil</a></li>
+                            <li><a class="nav-links" href="#apropos">A propos</a></li>
+                            <li><a class="nav-links" href="#fonctionnalite">Fonctionnalités</a></li>
+                            <li><a class="nav-links" href="#avantage">Avantages</a></li>
+                            <li><a class="nav-links" href="#contact">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
